# trivium-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: simple_xor.rs
src/: lib.rs  trivium.rs
