[package]
name = "trivium"
version = "0.1.0"
edition = "2024"
description = "Small Rust implementation of the Trivium stream cipher."
license = "MIT"
readme = "README.md"
repository = "https://github.com/1595901624/trivium-rs"
homepage = "https://github.com/1595901624/trivium-rs"
documentation = "https://docs.rs/trivium"
keywords = ["cryptography", "stream-cipher", "trivium"]

[dependencies]
